<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">petcafe</string>
    <string name="actionbar_title">Pet Cafe</string>
    <string name="icon_content_description">This is the content description.</string>
    <string name="cat">Meow</string>
    <string name="dog">Bark</string>
    <string name="cat_description">This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. This is a cat. </string>
    <string name="dog_description">This is a dog.</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="facebook_app_id">1427100530914190</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Blogs</item>
        <item>Profile</item>
        <item>My Blog</item>
        <item>Friends Posts</item>
        <item>New Post</item>
        <item>Search Posts</item>
        <item>My Friends</item>
        <item>Find Friends</item>
        <item>Chats</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
        <item>@drawable/ic_wiki</item>
    </array>

    <string-array name="pet_species">
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
        <item>Pig</item>
        <item>Other</item>
    </string-array>
    <string-array name="genders">
        <item>M</item>
        <item>F</item>
    </string-array>

    <!-- post-related -->
    <string-array name="post_types">
        <item>Stories</item>
        <item>Tips</item>
        <item>News</item>
        <item>Wiki</item>
    </string-array>

    <string name="title_activity_activity_viewpost">ActivityViewPost</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_my_blog">ActivityMyBlog</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_activityinitial_setup">ActivityinitialSetup</string>

    <!-- Some extra stuff -->
    <string name="initialSetupFirstLanguage">First Language</string>
    <string name="initialSetupFirstLanguageHint">Your first language&#8230;</string>
    <string name="initialSetupSecondLanguage">Second Language</string>
    <string name="initialSetupSecondLanguageHint">Your second language&#8230;</string>
    <string name="initialSetupStatus">Status</string>
    <string name="initialSetupStatusHint">Your message to the world&#8230;?</string>
    <string name="initialSetupEmail">Email</string>
    <string name="initialSetupEmailHint">YourEmail@provider.com</string>
    <string name="initialSetupPhoneNumber">Phone Number</string>
    <string name="initialSetupPhoneNumberHint">(888)-888-8888</string>
    <string name="initialSetupAddPet">Add Pet</string>
    <string name="doneButtonLabel">Done</string>
    <string name="skipButtonLabel">Skip</string>
    <string name="addPetDialogPetName">Pet Name:</string>
    <string name="addPetDialogPetNameHint">Enter your pet\'s name&#8230;</string>
    <string name="addPetDialogPetSpecies">Pet Species:</string>
    <string name="addPetDialogPetSpeciesHint">Enter your pet\'s species&#8230;</string>
    <string name="addPetDialogPetBreed">Pet Breed:</string>
    <string name="addPetDialogPetBreedHint">Enter your pet\'s breed&#8230;</string>
    <string name="addPetDialogPetGender">Pet Gender:</string>
    <string name="addPetDialogPetGenderHint">Enter your pet\'s gender&#8230;</string>
    <string name="addPetDialogPetAge">Pet Age:</string>
    <string name="addPetDialogPetAgeHint">Enter your pet\'s age&#8230;</string>
    <string name="addPetDialogDescription">Pet Description:</string>
    <string name="addPetDialogDescriptionHint">Enter a brief desription of your pet!</string>
    <string name="title_activity_activity_chat">ActivityChat</string>
    <string name="title_activity_actvitiy_dialog">ActvitiyDialog</string>
    <string name="chatButtonDescription">Button to initiate chat</string>
    <string name="title_activity_activity_friend_request_reject">ActivityFriendRequestReject</string>
    <string name="hello_world">Hello world!</string>

    <string name="viewpost_choose_tag">Choose a tag: </string>
    <string name="viewpost_choose_type">Choose a type:</string>
    <string name="viewpost_input_hint">Input a keyword here</string>

</resources>
