<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/frame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >


        <EditText
            android:id="@+id/search_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="@string/viewpost_input_hint"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/search_input"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/icon_cat"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <!-- type spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/choose_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="14dp"
            android:gravity="center_vertical"
            android:text="@string/viewpost_choose_type"
            android:textColor="#FFA375"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/search_spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- tag spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/choose_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="14dp"
            android:layout_toRightOf="@id/search_spinner_type"
            android:gravity="center_vertical"
            android:text="@string/viewpost_choose_tag"
            android:textColor="#FFA375"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/search_spinner_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- list fragment -->
    <FrameLayout
        android:id="@+id/postlist_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </FrameLayout>

</LinearLayout>
